# python-project

./: LICENSE.txt  README.md  cookiecutter.json
.github/: pull_request_template.md
{{cookiecutter.project_name}}/: .gitignore  LICENSE.txt  README.md  pylintrc  pyproject.toml  pytest.ini
{{cookiecutter.project_name}}/test/unit/{{cookiecutter.module_name}}/: test_api.py
